fix white scrollbar visible

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,3 +13,17 @@ body {
   font-style: normal;
 }
 
+body {
+  background-color: #111113;
+  color: white;
+  overflow: hidden;
+}
+
+/* hide-scroll.css */
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
+.hide-scroll {
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none; /* Firefox */
+}
